[project]
name = "turnstack"
version = "0.1.0"
description = "Code-first, self-hosted WhatsApp flow engine"
authors = [{ name = "IdrisFallout", email = "dev@waithakasam.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"